# forgeflare

./: .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  PROMPT_plan_work.md  README.md  loop.sh  mise.toml
.claude/: settings.local.json
.claude/hooks/: ralph-guard.sh
.github/workflows/: ci.yml  release.yml
4d/be0821b2c5/: metadata.json
4d/be0821b2c5/0/: content_hash.txt  full.jsonl  metadata.json
66/68769235af/: metadata.json
66/68769235af/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
fb/f115d2321a/: metadata.json
fb/f115d2321a/0/: content_hash.txt  full.jsonl  metadata.json
reference/go-source/: go.mod  go.sum
specs/: README.md  coding-agent.md  release-workflow.md  session-capture.md  tool-name-compliance.md
src/: api.rs  main.rs  session.rs
src/tools/: bash.rs  edit.rs  list.rs  mod.rs  read.rs  search.rs
