[package]
name = "rust-coding-agent"
version = "0.0.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "2"
futures-util = "0.3"
wait-timeout = "0.2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "agent"
path = "src/main.rs"
